# photils-cli

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yaml
appimage_resources/: photils-cli.appdata.xml  photils-cli.desktop  photils.icns
cmake/: Install.cmake
include/: base64.h  helper.h  inference.h  version.h  version.h.in
res/: labels.json
scripts/: build-appimage.sh  build-osx-app.sh
src/: helper.cpp  inference.cpp  main.cpp
tests/: CMakeLists.txt  test_helper.cpp  test_inference.cpp
travis/: build-appimage.sh  build-opencv4.sh  build-osx-app.sh  build-tensorflow-lite.sh
